--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,9 @@
     "name": "backend",
     "version": "0.0.1",
     "scripts": {
-        "start": "nest start",
-        "start:dev": "nest start --watch",
-        "build": "nest build",
+        "start": "node dist/main.js",       
+        "start:dev": "nest start --watch",  
+        "build": "nest build",              
         "test": "jest"
     },
     "dependencies": {
