--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.8.1",
     "@tailwindcss/vite": "^4.1.5",
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
